complete M7.2 customer cancellation
